--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Web API Blog Project",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon index.js"
+    "serve": "nodemon index.js"
   },
   "repository": {
     "type": "git",
